# geist-p

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  change-log.md  geist  index.html  mkdocs.yml  pyproject.toml  repro-config  requirements.txt
.github/workflows/: docs.yml
.repro-logs/: test_clean-demo.txt
0.0/changelog/: index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html
0.1/changelog/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html
0.2/changelog/: index.html
0.2/search/: search_index.json
0.3/: index.html
0.3/changelog/: index.html
0.3/scipy-2024-demo/: report.html
0.3/search/: search_index.json
0.3/setup/: index.html
0.4/changelog/: index.html
changelog/: index.html
commands/create/: index.html
commands/destroy/: index.html
commands/export/: index.html
commands/graph/: index.html
commands/load/: index.html
commands/query/: index.html
demo/01-jinja-demos/: run.sh  run.txt
demo/02-rdflib-demos/: run.sh  run.txt  templates.geist
demo/03-test-infer/: run.sh  run.txt
demo/04-scipy-2024/: run.sh  run.txt  templates.geist
demo/05-w-wo-geist/: run.sh  run.txt
demo/06-python-api/: run.sh  run.txt
dev/: 404.html  index.html
dev/changelog/: index.html
dev/search/: search_index.json
dev/setup/: index.html
docs/: changelog.md  index.md  setup.md
docs/cli/: create.md  destroy.md  export.md  graph.md  load.md  (+2 more)
exports/: base-manifest  base-setup  demo-makefile  demo-manifest  demo-setup  demo-targets  print_banner  print_template
latest/: 404.html  index.html
search/: search_index.json
setup/: index.html
tests/: test_rdflib_query2df.py
(+367 files in other folders)
