[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geist-p"
version = "0.4.1"
dependencies = [
    "click",
    "pandas",
    "tabulate",
    "Jinja2",
    "jinja2-simple-tags",
    "requests",
]

[project.optional-dependencies]
rdflib = ["rdflib", "owlrl"]
duckdb = ["duckdb", "pyarrow"]
clingo = ["clingo==5.8.0"]
all = ["geist-p[rdflib]", "geist-p[duckdb]", "geist-p[clingo]"]

[project.scripts]
geist = "geist.__main__:cli"
