[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geist-p"
version = "0.4.2"
description = "Geist is a new templating language for declarative data manipulation, query, and report generation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Meng Li"},
    {name = "Timothy McPhillips"},
    {name = "Bertram Ludäscher"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "pandas",
    "tabulate",
    "Jinja2",
    "jinja2-simple-tags",
    "requests",
]

[project.urls]
Homepage = "https://cirss.github.io/geist-p"
Repository = "https://github.com/cirss/geist-p"

[project.optional-dependencies]
rdflib = ["rdflib", "owlrl"]
duckdb = ["duckdb", "pyarrow"]
clingo = ["clingo==5.8.0"]
all = ["geist-p[rdflib]", "geist-p[duckdb]", "geist-p[clingo]"]

[project.scripts]
geist = "geist.__main__:cli"
